# sim2-alignment

./: CMakeLists.txt  LICENSE  README.md  readme
src/: align.cpp
